--- a/src/App.css
+++ b/src/App.css
@@ -79,6 +79,8 @@ body {
 
 .table {
   border-collapse: collapse;
+      width: 40rem;
+    height: 40rem;
 }
 
 .cell {
@@ -109,8 +111,8 @@ body {
 }
 
 input {
-  width: 3.5rem;
-  height: 3.5rem;
+  width: 100%;
+  height: 100%;
   text-align: center;
   font-size: 2rem;
   border: none;
@@ -778,14 +780,14 @@ body.dark .badge {
   }
 
   .table {
-    width: 95%;
-    max-width: 340px;
+    width: 98%;
+    max-width: 300px;
     margin: 0 auto;
   }
 
   .cell {
-    width: 2.2rem;
-    height: 2.2rem;
+    width: 1.85rem;
+    height: 1.85rem;
   }
 
   input {
@@ -906,14 +908,14 @@ body.dark .badge {
   }
 
   .table {
-    width: 85%;
-    max-width: 420px;
+    width: 90%;
+    max-width: 380px;
     margin: 0 auto;
   }
 
   .cell {
-    width: 2.5rem;
-    height: 2.5rem;
+    width: 2.1rem;
+    height: 2.1rem;
   }
 
   input {
